--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,20 +1,18 @@
 body {
-    background-image: url("background.jpg");
-    background-size: 100vw 100vh;
+    background-image: url(shattered-island.gif);
 }
 .jumbotron {
+    display: inline-block;
+    height: 225px;
+    width: 600px;
     background-color: #FA8072;
     margin: auto;
     border-radius: 40px;
-    display: block;
-    width: 900px;
-    height: 225px;
     padding: 15px;
     text-align: center;
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0;
-    
-    box-shadow: 10px 10px 10px #888888;
+    box-shadow: 10px 10px 50px #000000;
 }
 
 .Title {
@@ -27,10 +25,46 @@ body {
 }
 
 .Text {
-    font-family: monospace
+    font-family: monospace;
 }
 
 .credit {
     position: absolute;
     bottom: 0; left: 0;
+    color: #000000;
+    background-color: white;
+    border-top-right-radius: 20px;
+    padding: 10px;
+    padding-right: 20px;
+    font-weight: bold;
+        font-family: monospace;
+
 }
+
+@media (max-width: 600px) {
+  .jumbotron {
+    display: inline-block;
+    height: 275px;
+    width: 300px;
+    background-color: #FA8072;
+    margin: auto;
+    border-radius: 40px;
+    padding: 15px;
+    text-align: center;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    }
+
+    .Title {
+        font-family: 'Permanent Marker', cursive;
+        font-size: 3rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    
+}
+
+
